Added a missing "add open" to serialization and began to work on serialization for plots, but more work and research is needed.