@@ -12,6 +12,7 @@ plugins {
 
 def versionName = "Simbrain4Beta"
 def simbrainJvmArgs = [ '--add-opens','java.base/java.util=ALL-UNNAMED',
+                        '--add-opens','java.desktop/java.awt=ALL-UNNAMED',
                         '--add-opens','java.desktop/java.awt.geom=ALL-UNNAMED',
                         '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
                         '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
